# driftbuddy

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  =0.1.0  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  LANGCHAIN_INTEGRATION.md  LICENSE  Makefile  PHASE3_COMPLETION_SUMMARY.md  README.md  README_ADVANCED_RBAC.md  README_COMPLIANCE_REPORTING.md  README_ML_ANALYTICS.md  STEAMPIPE_SETUP.md  demo_risk_calculation.py  docker-compose.yml  drift_report.md  driftbuddy-cli.py  driftbuddy.db  driftbuddy.py  driftbuddy_security_dashboard_20250725_212517.html  driftbuddy_security_dashboard_20250725_220002.html  driftbuddy_security_report_20250725_212637.md  driftbuddy_security_report_20250725_220210.md  env.example  kics_explained.html  kics_explained.md  kics_explainer.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements-web-v2.txt  requirements-web-v3-minimal.txt  requirements-web-v3-simple.txt  requirements-web-v3.txt  (+24 more)
.github/workflows/: ci.yml  driftbuddy-basic.yml  driftbuddy-scan.yml
agent/: explainer.py  kics_explainer.py
assets/queries/azureResourceManager/account_admins_not_notified_by_email/: metadata.json  query.rego
assets/queries/azureResourceManager/aks_cluster_network_policy_not_configured/: metadata.json
assets/queries/azureResourceManager/aks_cluster_rbac_disabled/: metadata.json
assets/queries/azureResourceManager/aks_dashboard_enabled/: metadata.json
assets/queries/azureResourceManager/aks_logging_azure_monitoring_disabled/: metadata.json
assets/queries/azureResourceManager/aks_with_authorized_ip_ranges_disabled/: metadata.json
assets/queries/azureResourceManager/app_service_authentication_not_set/: metadata.json
assets/queries/azureResourceManager/azure_instance_using_basic_authentication/: metadata.json  query.rego
assets/queries/azureResourceManager/azure_managed_disk_without_encryption/: metadata.json
docs/: ENTERPRISE_READINESS.md  GITHUB_ACTIONS_SETUP.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STRUCTURE.md  STEAMPIPE_SETUP.md
examples/: github-actions-example.yml  steampipe_example.py
outputs/analysis/: .gitkeep
outputs/reports/: .gitkeep
scripts/: check_version.py  fix_all_issues.py  fix_permissions.py  fix_windows.py  run_kics.sh  security_scan.py  setup-github-actions.sh  setup_api_key.py  test_ci.py  test_performance.py
src/: __init__.py
src/agent/: explainer.py
src/driftbuddy/: __init__.py  config.py  core.py  exceptions.py  kics_explainer.py  kics_integration.py  langchain_integration.py  risk_assessment.py  steampipe_integration.py
src/driftbuddy/agent/: __init__.py  enhanced_agent.py  explainer.py
static/: index.html
test_data/iac_example/: aws_iam_vulnerable.tf  aws_s3_vulnerable.tf  aws_security_groups_vulnerable.tf  azure_vulnerable.bicep  gcp_vulnerable.yaml  kubernetes_vulnerable.yaml  main.tf
test_data/iac_example/docker/: docker_vulnerable.Dockerfile
test_data/iac_example/main/: main.tf
test_data/output/: .gitkeep  results.json
tests/: __init__.py  test_kics_fix.py  test_phase3_features.py  test_risk_assessment.py  test_steampipe_integration.py  test_steampipe_simple.py  test_timestamped_files.py  test_web_interface.py
web/: README.md  README_PHASE2.md  README_PHASE3.md  __init__.py  advanced_rbac.py  ai_chat.py  api.py  api_v2.py  api_v3.py  api_v3_simple.py  auth.py  cloud_connector.py  compliance_api.py  compliance_reporting.py  compliance_service.py  database.py  integration_apis.py  integrations_api.py  integrations_service.py  main.py  migrate_integrations.py  ml_analytics_api.py  ml_analytics_service.py  models.py  rbac_api.py  reporting.py  reporting_service.py  services.py  sso_integration.py  websocket.py
web/frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/frontend/public/: index.html  manifest.json
web/frontend/src/: App.tsx  AuthContext.tsx  Dashboard.tsx  Login.tsx  Reports.tsx  ScanResults.tsx  Scans.tsx
(+3228 files in other folders)
